--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
           eventcounters: ['*/OpenTelemetry.Instrumentation.EventCounters*/**', 'examples/event-counters/**', '!**/*.md']
           extensions: ['*/OpenTelemetry.Extensions/**', '*/OpenTelemetry.Extensions.Tests/**', '!**/*.md']
           geneva: ['*/OpenTelemetry.Exporter.Geneva*/**', '!**/*.md']
+          grpcnetclient: ['*/OpenTelemetry.Instrumentation.GrpcNetClient*/**', '!**/*.md']
           host: ['*/OpenTelemetry.ResourceDetectors.Host*/**', '!**/*.md']
           http: ['*/OpenTelemetry.Instrumentation.Http*/**', '!**/*.md']
           onecollector: ['*/OpenTelemetry.Instrumentation.OneCollector*/**', '!**/*.md']
@@ -65,6 +66,7 @@ jobs:
             '!*/OpenTelemetry.Instrumentation.Owin*/**',
             '!examples/owin/**',
             '!*/OpenTelemetry.PersistentStorage*/**',
+            '!*/OpenTelemetry.Instrumentation.GrpcNetClient*/**',
             '!*/OpenTelemetry.Instrumentation.Http*/**',
             '!*/OpenTelemetry.Instrumentation.Process*/**',
             '!examples/process-instrumentation/**',
@@ -150,6 +152,17 @@ jobs:
     with:
       project-name: OpenTelemetry.Exporter.Geneva
       code-cov-name: Exporter.Geneva
+
+  build-test-grpcnetclient:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'grpcnetclient')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: OpenTelemetry.Instrumentation.GrpcNetClient
+      code-cov-name: Instrumentation.GrpcNetClient
 
   build-test-host:
     needs: detect-changes
@@ -339,6 +352,7 @@ jobs:
             OpenTelemetry.Instrumentation.AspNet.Tests.csproj,
             OpenTelemetry.Instrumentation.AspNet.TelemetryHttpModule.Tests.csproj,
             OpenTelemetry.Instrumentation.EventCounters.Tests.csproj,
+            OpenTelemetry.Instrumentation.GrpcNetClient.Tests.csproj,
             OpenTelemetry.Instrumentation.Http.Tests.csproj,
             OpenTelemetry.Instrumentation.Owin.Tests.csproj,
             OpenTelemetry.Instrumentation.Process.Tests.csproj,
@@ -396,6 +410,7 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'aws')
       || contains(needs.detect-changes.outputs.changes, 'azure')
       || contains(needs.detect-changes.outputs.changes, 'extensions')
+      || contains(needs.detect-changes.outputs.changes, 'grpcnetclient')
       || contains(needs.detect-changes.outputs.changes, 'host')
       || contains(needs.detect-changes.outputs.changes, 'http')
       || contains(needs.detect-changes.outputs.changes, 'processdetector')
@@ -422,6 +437,7 @@ jobs:
       build-test-eventcounters,
       build-test-extensions,
       build-test-geneva,
+      build-test-grpcnetclient,
       build-test-host,
       build-test-http,
       build-test-onecollector,
