--- a/src/OpenTelemetry.ResourceDetectors.ProcessRuntime/OpenTelemetry.ResourceDetectors.ProcessRuntime.csproj
+++ b/src/OpenTelemetry.ResourceDetectors.ProcessRuntime/OpenTelemetry.ResourceDetectors.ProcessRuntime.csproj
@@ -6,6 +6,13 @@
     <Description>OpenTelemetry Extensions - Process Runtime Resource Detector for .NET runtime.</Description>
     <MinVerTagPrefix>ResourceDetectors.ProcessRuntime-</MinVerTagPrefix>
   </PropertyGroup>
+
+  <!--Do not run Package Baseline Validation as this package has never released a stable version.
+  Remove this property once we have released a stable version and add PackageValidationBaselineVersion property.-->
+  <PropertyGroup>
+    <DisablePackageBaselineValidation>true</DisablePackageBaselineValidation>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
     <PackageReference Include="System.Runtime.InteropServices.RuntimeInformation" Version="4.0.0" Condition="'$(TargetFramework)' == '$(NetFrameworkMinimumSupportedVersion)'" />
