--- a/src/OpenTelemetry.Instrumentation.GrpcNetClient/OpenTelemetry.Instrumentation.GrpcNetClient.csproj
+++ b/src/OpenTelemetry.Instrumentation.GrpcNetClient/OpenTelemetry.Instrumentation.GrpcNetClient.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <!--Do not run Package Baseline Validation as this package has never released a stable version.
-  Remove this property once we have released a stable version.-->
+  Remove this property once we have released a stable version and add PackageValidationBaselineVersion property.-->
   <PropertyGroup>
     <DisablePackageBaselineValidation>true</DisablePackageBaselineValidation>
   </PropertyGroup>
