--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -51,6 +51,7 @@ jobs:
       run: dotnet test build/Projects/${{ inputs.project-name }}.proj --collect:"Code Coverage" --results-directory:TestResults --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
 
     - name: dotnet pack build/Projects/${{ inputs.project-name }}.proj
+      if: ${{ matrix.os == 'windows-latest' }}
       run: dotnet pack build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore --no-build /p:EnablePackageValidation=true
 
     - name: Install coverage tool
