--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -37,6 +37,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0 # fetching all, to be able to calculate package version
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
