--- a/.github/workflows/Component.BuildTest.yml
+++ b/.github/workflows/Component.BuildTest.yml
@@ -44,7 +44,7 @@ jobs:
       uses: actions/setup-dotnet@v4
 
     - name: dotnet restore build/Projects/${{ inputs.project-name }}.proj
-      run: dotnet restore build/Projects/${{ inputs.project-name }}.proj /p:EnablePackageValidation=true
+      run: dotnet restore build/Projects/${{ inputs.project-name }}.proj -p:EnablePackageValidation=true
 
     - name: dotnet build build/Projects/${{ inputs.project-name }}.proj
       run: dotnet build build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore
@@ -54,7 +54,7 @@ jobs:
 
     - name: dotnet pack build/Projects/${{ inputs.project-name }}.proj
       if: ${{ matrix.os == 'windows-latest' }}
-      run: dotnet pack build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore --no-build /p:EnablePackageValidation=true
+      run: dotnet pack build/Projects/${{ inputs.project-name }}.proj --configuration Release --no-restore --no-build -p:EnablePackageValidation=true
 
     - name: Install coverage tool
       run: dotnet tool install -g dotnet-coverage
