OpenTelemetry.ResourceDetectors.Process -> OpenTelemetry.Resources.Process

--- a/.github/component_owners.yml
+++ b/.github/component_owners.yml
@@ -73,10 +73,10 @@ components:
   src/OpenTelemetry.ResourceDetectors.Host/:
     - Kielek
     - lachmatt
-  src/OpenTelemetry.ResourceDetectors.Process/:
+  src/OpenTelemetry.ResourceDetectors.ProcessRuntime/:
     - Kielek
     - lachmatt
-  src/OpenTelemetry.ResourceDetectors.ProcessRuntime/:
+  src/OpenTelemetry.Resources.Process/:
     - Kielek
     - lachmatt
   src/OpenTelemetry.Sampler.AWS/:
@@ -163,10 +163,10 @@ components:
   test/OpenTelemetry.ResourceDetectors.Host.Tests/:
     - Kielek
     - lachmatt
-  test/OpenTelemetry.ResourceDetectors.Process.Tests/:
+  test/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/:
     - Kielek
     - lachmatt
-  test/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/:
+  test/OpenTelemetry.Resources.Process.Tests/:
     - Kielek
     - lachmatt
   test/OpenTelemetry.Sampler.AWS.Tests/:
