--- a/src/OpenTelemetry.Resources.Process/OpenTelemetry.Resources.Process.csproj
+++ b/src/OpenTelemetry.Resources.Process/OpenTelemetry.Resources.Process.csproj
@@ -16,4 +16,8 @@
   <ItemGroup>
     <PackageReference Include="OpenTelemetry" Version="$(OpenTelemetryCoreLatestVersion)" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="$(RepoRoot)\src\Shared\Guard.cs" Link="Includes\Guard.cs" />
+  </ItemGroup>
 </Project>
