Handles changes on main

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -54,6 +54,7 @@ body:
         - OpenTelemetry.ResourceDetectors.Host
         - OpenTelemetry.ResourceDetectors.Process
         - OpenTelemetry.ResourceDetectors.ProcessRuntime
+        - OpenTelemetry.Resources.Gcp
         - OpenTelemetry.Sampler.AWS
         - OpenTelemetry.SemanticConventions
     validations:
