--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           persistentstorage: ['*/OpenTelemetry.PersistentStorage*/**', '!**/*.md']
           process: ['*/OpenTelemetry.Instrumentation.Process*/**', 'examples/process-instrumentation/**', '!**/*.md']
           processdetector: ['*/OpenTelemetry.ResourceDetectors.Process/**', '*/OpenTelemetry.ResourceDetectors.Process.Tests/**', '!**/*.md']
-          processruntime: ['*/OpenTelemetry.ResourceDetectors.ProcessRuntime/**', '*/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/**', '!**/*.md']
+          processruntime: ['*/OpenTelemetry.Resources.ProcessRuntime/**', '*/OpenTelemetry.Resources.ProcessRuntime.Tests/**', '!**/*.md']
           redis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**/*.md']
           resourcedetectors: ['*/OpenTelemetry.ResourceDetectors.*/**', '!**/*.md']
           runtime: ['*/OpenTelemetry.Instrumentation.Runtime*/**', 'examples/runtime-instrumentation/**', '!**/*.md']
@@ -57,8 +57,8 @@ jobs:
             '!*/OpenTelemetry.ResourceDetectors.Host*/**',
             '!*/OpenTelemetry.ResourceDetectors.Process/**',
             '!*/OpenTelemetry.ResourceDetectors.Process.Tests/**',
-            '!*/OpenTelemetry.ResourceDetectors.ProcessRuntime/**',
-            '!*/OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests/**',
+            '!*/OpenTelemetry.Resources.ProcessRuntime/**',
+            '!*/OpenTelemetry.Resources.ProcessRuntime.Tests/**',
             '!*/OpenTelemetry.Instrumentation.EventCounters*/**',
             '!examples/event-counters/**',
             '!*/OpenTelemetry.Extensions/**',
@@ -265,8 +265,8 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'shared')
     uses: ./.github/workflows/Component.BuildTest.yml
     with:
-      project-name: OpenTelemetry.ResourceDetectors.ProcessRuntime
-      code-cov-name: ResourceDetectors.ProcessRuntime
+      project-name: OpenTelemetry.Resources.ProcessRuntime
+      code-cov-name: Resources.ProcessRuntime
 
   build-test-redis:
     needs: detect-changes
@@ -379,7 +379,7 @@ jobs:
             OpenTelemetry.ResourceDetectors.Azure.Tests.csproj,
             OpenTelemetry.ResourceDetectors.Host.Tests.csproj,
             OpenTelemetry.ResourceDetectors.Process.Tests.csproj,
-            OpenTelemetry.ResourceDetectors.ProcessRuntime.Tests.csproj
+            OpenTelemetry.Resources.ProcessRuntime.Tests.csproj
 
         $failedProjects = @()
 
