--- a/src/OpenTelemetry.Resources.ProcessRuntime/OpenTelemetry.Resources.ProcessRuntime.csproj
+++ b/src/OpenTelemetry.Resources.ProcessRuntime/OpenTelemetry.Resources.ProcessRuntime.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net6.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">$(TargetFrameworks);$(NetFrameworkMinimumSupportedVersion)</TargetFrameworks>
     <Description>OpenTelemetry Extensions - Process Runtime Resource Detector for .NET runtime.</Description>
-    <MinVerTagPrefix>ResourceDetectors.ProcessRuntime-</MinVerTagPrefix>
+    <MinVerTagPrefix>Resources.ProcessRuntime-</MinVerTagPrefix>
   </PropertyGroup>
 
   <!--Do not run Package Baseline Validation as this package has never released a stable version.
