[Exporter.Geneva] Prepare Release - 1.8.0

--- a/src/OpenTelemetry.Exporter.Geneva/Common.GenevaExporter.props
+++ b/src/OpenTelemetry.Exporter.Geneva/Common.GenevaExporter.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <OTelSdkVersion>1.8.0-rc.1</OTelSdkVersion>
+    <OTelSdkVersion>1.8.1</OTelSdkVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(OTelSdkVersion.Contains('alpha')) OR $(OTelSdkVersion.Contains('beta')) OR $(OTelSdkVersion.Contains('rc'))">
