[Resources.Process] Rename process detector namespace (#1717)
Co-authored-by: Piotr Kiełkowicz <pkiekowicz@splunk.com>

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -52,9 +52,9 @@ body:
         - OpenTelemetry.ResourceDetectors.Azure
         - OpenTelemetry.ResourceDetectors.Container
         - OpenTelemetry.ResourceDetectors.Host
-        - OpenTelemetry.ResourceDetectors.Process
         - OpenTelemetry.ResourceDetectors.ProcessRuntime
         - OpenTelemetry.Resources.Gcp
+        - OpenTelemetry.Resources.Process
         - OpenTelemetry.Sampler.AWS
         - OpenTelemetry.SemanticConventions
 
