--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -129,15 +129,15 @@ flags:
     paths:
       - src/OpenTelemetry.ResourceDetectors.Host
 
-  unittests-ResourceDetectors.Process:
-    carryforward: true
-    paths:
-      - src/OpenTelemetry.ResourceDetectors.Process
-
   unittests-ResourceDetectors.ProcessRuntime:
     carryforward: true
     paths:
       - src/OpenTelemetry.ResourceDetectors.ProcessRuntime
+
+  unittests-Resources.Process:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.Resources.Process
 
   unittests-SemanticConventions:
     carryforward: true
