--- a/.github/workflows/package-Resources.Process.yml
+++ b/.github/workflows/package-Resources.Process.yml
@@ -1,4 +1,4 @@
-name: Pack OpenTelemetry.ResourceDetectors.Process
+name: Pack OpenTelemetry.Resources.Process
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
         default: 'warning'
   push:
     tags:
-      - 'ResourceDetectors.Process-*' # trigger when we create a tag with prefix "ResourceDetectors.Process-"
+      - 'Resources.Process-*' # trigger when we create a tag with prefix "Resources.Process-"
 
 jobs:
   call-build-test-pack:
@@ -17,5 +17,5 @@ jobs:
       contents: write
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.ResourceDetectors.Process
+      project-name: OpenTelemetry.Resources.Process
     secrets: inherit
