--- a/.github/workflows/package-Exporter.OneCollector.yml
+++ b/.github/workflows/package-Exporter.OneCollector.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.Exporter.OneCollector
+      project: build/Projects/OpenTelemetry.Exporter.OneCollector.proj
     secrets: inherit
