--- a/.github/workflows/package-Extensions.yml
+++ b/.github/workflows/package-Extensions.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.Extensions
+      project: build/Projects/OpenTelemetry.Extensions.proj
     secrets: inherit
