--- a/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
+++ b/.github/workflows/package-Instrumentation.EntityFrameworkCore.yml
@@ -12,55 +12,8 @@ on:
       - 'Instrumentation.EntityFrameworkCore-*' # trigger when we create a tag with prefix "Instrumentation.EntityFrameworkCore-"
 
 jobs:
-  build-test-pack:
-    runs-on: ${{ matrix.os }}
-    permissions:
-      contents: write
-    env:
-      PROJECT: OpenTelemetry.Instrumentation.EntityFrameworkCore
-
-    strategy:
-      matrix:
-        os: [windows-latest]
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0 # fetching all
-
-    - name: Setup dotnet
-      uses: actions/setup-dotnet@v4
-
-    - name: Install dependencies
-      run: dotnet restore src/${{env.PROJECT}}
-
-    - name: dotnet build ${{env.PROJECT}}
-      run: dotnet build src/${{env.PROJECT}} --configuration Release --no-restore -p:Deterministic=true
-
-    - name: dotnet test ${{env.PROJECT}}
-      run: dotnet test test/${{env.PROJECT}}.Tests
-
-    - name: dotnet pack ${{env.PROJECT}}
-      run: dotnet pack src/${{env.PROJECT}} --configuration Release --no-build
-
-    - name: Publish Artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{env.PROJECT}}-packages
-        path: '**/${{env.PROJECT}}/bin/**/*.*nupkg'
-
-    - name: Publish Nuget
-      run: |
-        nuget push **/${{env.PROJECT}}/bin/**/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.NUGET_TOKEN }} -SymbolApiKey ${{ secrets.NUGET_TOKEN }}
-
-    - name: Create GitHub Prerelease
-      if: ${{ (contains(github.ref_name, '-alpha.') || contains(github.ref_name, '-beta.') || contains(github.ref_name, '-rc.')) }}
-      run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --verify-tag --notes "See [CHANGELOG](https://github.com/open-telemetry/opentelemetry-dotnet-contrib/blob/${{ github.ref_name }}/src/${{env.PROJECT}}/CHANGELOG.md) for details." --prerelease
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Create GitHub Release
-      if: ${{ !(contains(github.ref_name, '-alpha.') || contains(github.ref_name, '-beta.') || contains(github.ref_name, '-rc.')) }}
-      run: gh release create ${{ github.ref_name }} --title ${{ github.ref_name }} --verify-tag --notes "See [CHANGELOG](https://github.com/open-telemetry/opentelemetry-dotnet-contrib/blob/${{ github.ref_name }}/src/${{env.PROJECT}}/CHANGELOG.md) for details." --latest
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  call-build-test-pack:
+    uses: ./.github/workflows/Component.Package.yml
+    with:
+      project: src/OpenTelemetry.Instrumentation.EntityFrameworkCore/OpenTelemetry.Instrumentation.EntityFrameworkCore.csproj
+    secrets: inherit
