--- a/.github/workflows/package-Instrumentation.Owin.yml
+++ b/.github/workflows/package-Instrumentation.Owin.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.Instrumentation.Owin
+      project: build/Projects/OpenTelemetry.Instrumentation.Owin.proj
     secrets: inherit
