--- a/.github/workflows/package-ResourceDetectors.Azure.yml
+++ b/.github/workflows/package-ResourceDetectors.Azure.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.ResourceDetectors.Azure
+      project: build/Projects/OpenTelemetry.ResourceDetectors.Azure.proj
     secrets: inherit
