--- a/.github/workflows/package-ResourceDetectors.ProcessRuntime.yml
+++ b/.github/workflows/package-ResourceDetectors.ProcessRuntime.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.ResourceDetectors.ProcessRuntime
+      project: build/Projects/OpenTelemetry.ResourceDetectors.ProcessRuntime.proj
     secrets: inherit
