--- a/.github/workflows/package-SemanticConventions.yml
+++ b/.github/workflows/package-SemanticConventions.yml
@@ -15,5 +15,5 @@ jobs:
   call-build-test-pack:
     uses: ./.github/workflows/Component.Package.yml
     with:
-      project-name: OpenTelemetry.SemanticConventions
+      project: build/Projects/OpenTelemetry.SemanticConventions.proj
     secrets: inherit
